# game-of-life

./: .gitignore  CMakeLists.txt  GameOfLife  README.md  constants.h  game.c  game.h  main.c  types.h
